<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout="@+id/parameter"
                android:text="@string/title"
                android:textSize="@dimen/title" />

            <ImageView
                android:id="@+id/separation10dp"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator"
                android:src="@color/separator" />

            <CheckBox
                android:id="@+id/onOffSilencieux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="true"
                android:text="@string/silencieux" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/volumeText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/volume" />

                <SeekBar
                    android:id="@+id/volumeBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/separation5dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator"
                android:src="@color/separator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout="@+id/parameter"
                android:text="@string/subtitle"
                android:textSize="@dimen/subtitle" />

            <Spinner
                android:id="@+id/orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/orientationArray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/luminosite" />

                <SeekBar
                    android:id="@+id/SeekBar01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progress="50" />
            </LinearLayout>

            <ImageView
                android:id="@+id/separator5dp2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/separator"
                android:src="@color/separator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout="@+id/parameter"
                android:text="@string/veille"
                android:textSize="@dimen/subtitle" />

            <RadioGroup
                android:id="@+id/tpsMiseEnVeille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/trenteSecondes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/trenteSeconde" />

                <RadioButton
                    android:id="@+id/uneMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uneMinute" />

                <RadioButton
                    android:id="@+id/quinzeMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/quinzeMinutes" />

                <RadioButton
                    android:id="@+id/uneHeure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uneHeure" />

                <RadioButton
                    android:id="@+id/jamais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jamais" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>

</LinearLayout>